--- a/pom.xml
+++ b/pom.xml
@@ -38,5 +38,10 @@
             <artifactId>kie-ci</artifactId>
             <version>${drools.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.jbpm</groupId>
+            <artifactId>jbpm-bpmn2</artifactId>
+            <version>${drools.version}</version>
+        </dependency>
     </dependencies>
 </project>
